AC_PREREQ(2.52)

AC_INIT()

AC_CONFIG_SRCDIR([src/ucview.c])
AC_CONFIG_MACRO_DIR([m4])

dist_version=0.33
AC_SUBST(dist_version)

AM_INIT_AUTOMAKE(ucview, $dist_version )

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

AC_HEADER_STDC

AM_PROG_CC_C_O

AC_PATH_PROG(GCONFTOOL, gconftool-2)
IT_PROG_INTLTOOL([0.35.0])


if test $ac_compiler_gnu = yes; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi


PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.8.0)


PKG_CHECK_MODULES(UCVIEW,
		  libunicapgtk >= 0.2.23 gtk+-2.0 >= 2.8.0 gthread-2.0 >= 2.8.0 gconf-2.0 libucil >= 0.2.2 libglade-2.0, gdk-pixbuf-2.0 )

#CPPFLAGS="${CPPFLAGS} -DG_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"


AC_PATH_PROG(GDK_PIXBUF_CSOURCE, gdk-pixbuf-csource, no)
if test x$GDK_PIXBUF_CSOURCE = xno; then
  AC_MSG_ERROR(Could not find gdk-pixbuf-csource in your PATH)
fi

dnl 
dnl Gconf settings
dnl 

AM_GCONF_SOURCE_2


dnl
dnl Data dirs
dnl

AC_ARG_WITH(desktop-dir,
            [  --with-desktop-dir=PATH where to install desktop files (default=PREFIX/share)])

if test "x$with_desktop_dir" != x; then
  DESKTOP_DATADIR=$with_desktop_dir
else
  DESKTOP_DATADIR="$datadir"
fi

AM_CONDITIONAL(DESKTOP_DATADIR, test "x$with_desktop_dir" != xno)
AC_SUBST(DESKTOP_DATADIR)

AS_AC_EXPAND(DATADIR, $datadir)

#
# Gettext
#
GETTEXT_PACKAGE=ucview
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext Package])

AM_GLIB_GNU_GETTEXT([external])


AC_ARG_ENABLE(histogram-plugin, 
              AS_HELP_STRING( [--enable-histogram-plugin], 
	      		      [build plugin to display a histogram [default=yes]] ),	
	      {
		 BUILD_HISTOGRAM_PLUGIN=$enableval
	      }, BUILD_HISTOGRAM_PLUGIN="yes"
)

AM_CONDITIONAL( BUILD_HISTOGRAM_PLUGIN, test x$BUILD_HISTOGRAM_PLUGIN = xyes )


AC_OUTPUT([ 
Makefile
po/Makefile.in
src/Makefile
data/Makefile
data/ucview.pc
icons/Makefile
desktop/Makefile
desktop/ucview.desktop.in
plugins/Makefile
icons/hicolor/Makefile
icons/hicolor/16x16/Makefile
icons/hicolor/24x24/Makefile
icons/hicolor/32x32/Makefile
icons/hicolor/48x48/Makefile
icons/asus/Makefile
icons/asus/41x41/Makefile

])
